--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ code {
 body {
   font-family: sans-serif;
   line-height: 1.5;
+  background-color: #141414;
+  color: #ffffff;
 }
 
 h1,
@@ -43,7 +45,7 @@ img {
   height: auto;
 }
 
-div,
+/* div,
 table {
   justify-content: center;
   text-align: center;
@@ -51,4 +53,11 @@ table {
   margin-right: auto;
   margin-top: 15px;
   width: 70%;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
 }
